--- a/index.html
+++ b/index.html
@@ -13,36 +13,56 @@
 	<body>
 		<!-- The body is the entire viewable area of the web page. For example we can see text, links, images, and media -->
 
-		<h1>Exceptional</h1>
-		<h2>Realty Group</h2>
+		<header>
+		<!--Header is a new semantic for HTML5-->
+			<h1>Exceptional</h1>
+			<h2>Realty Group</h2>
+		
 
 		<!-- links -->
-		<a href="index.html">About</a>
-		<a href="new-properties.html">New Properties</a>
-		<a href="real-estate-listings.html">Listings</a>
-		<a href="market-report.html">Market Report</a>
-		<a href="contact.html">Contact</a>
-		<a href="http://hud.gov" target="_blank">H.U.D.</a>
+		<nav>
+			<a href="index.html">About</a>
+			<a href="new-properties.html">New Properties</a>
+			<a href="real-estate-listings.html">Listings</a>
+			<a href="market-report.html">Market Report</a>
+			<a href="contact.html">Contact</a>
+			<a href="http://hud.gov" target="_blank">H.U.D.</a>
+		</nav>
+		</header>
 
-		<img src="images/intro-pic.jpg" alt="A beautiful living room" title="Welcome to Exceptional Realty">
+		<section id="featured-property">
+			<figure>
+			<img src="images/intro-pic.jpg" alt="A beautiful living room" title="Welcome to Exceptional Realty">
+			<figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards</figcaption>
+			</figure>
 
-		<!--
-		foldername/ = go inside folder
-		filename = use a file in the current directory
-		../ = leave the current folder and go up to parent folder
-	-->
+			<!--
+			foldername/ = go inside folder
+			filename = use a file in the current directory
+			../ = leave the current folder and go up to parent folder
+		-->
 
-		<p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quibusdam at explicabo consequatur voluptatem quasi mollitia sit pariatur inventore suscipit officiis. Molestias sapiente maiores, repudiandae soluta officiis qui, hic temporibus pariatur!</p>
+			<p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quibusdam at explicabo consequatur voluptatem quasi mollitia sit pariatur inventore suscipit officiis. Molestias sapiente maiores, repudiandae soluta officiis qui, hic temporibus pariatur!</p>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate natus repellendus quae qui ipsum aperiam magnam porro, corporis ullam? Aperiam, sequi odit asperiores, iusto est cumque in alias blanditiis sed.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate natus repellendus quae qui ipsum aperiam magnam porro, corporis ullam? Aperiam, sequi odit asperiores, iusto est cumque in alias blanditiis sed.</p>
+		
+		</section>
 
-		<!--promo video-->
-		<video controls>
-			<source src="videos/real-estate.mp4" type="video/mp4">
-			<source src="videos/real-estate.ogv" type="video/ogg">
-			Your browser does not support HTML5 video. <a href="http://
-			browsehappy.com">Please upgrade your browser.</a>
-		</video>
+		<section id="promotional">
+			<figure>
+			<!--promo video-->
+			<video controls>
+				<source src="videos/real-estate.mp4" type="video/mp4">
+				<source src="videos/real-estate.ogv" type="video/ogg">
+				Your browser does not support HTML5 video. <a href="http://
+				browsehappy.com">Please upgrade your browser.</a>
+			</video>
+			<figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
+			</figure>
+		</section>
+		<footer>
+			&copy; 2014 Exceptional Realty. All Rights Reserved
+		</footer>
 
 	</body>
 </html>
