--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
       <a href="#">Facebook</a>
       <a href="#">Google Plus</a>
     </div>
-
-    <header>
+  <div class="white-wood">
+    <header class="medium-fade shadow">
       <div class="wrapper">
         <div id="logo">
           <h1>Exceptional</h1>
           <h2>Realty Group</h2>
         </div>
       </div><!-- .wrapper -->
-      <div id="navbar">
+      <div id="navbar" class="light-fade">
         <div class="wrapper">
           <nav>
-            <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+            <a class="selected" href="index.html">About</a><a href="new-properties.html">New Properties</a><a href="real-estate-listings.html">Listings</a><a href="market-report.html">Market Report</a><a href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">H.U.D.</a>
           </nav>
         </div><!-- .wrapper -->
       </div><!-- #navbar -->
@@ -59,8 +59,9 @@
       </section>
       
     </div><!-- .wrapper -->
+  </div><!-- .white-wood -->
 
-    <section id="details">
+    <section id="details" class="medium-fade">
       <div class="wrapper clearfix">
         <div class="col-1 first border-right">
           <h3>Contact</h3>
