--- a/index.html
+++ b/index.html
@@ -60,47 +60,48 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, inventore, vero, rerum ullam nihil sapiente tempora molestias quis ducimus ipsum laborum vel. Tempore perspiciatis ea error dignissimos libero recusandae explicabo.</p>
         </section>
 
-    <section id="details" class="medium-fade">
-      <div class="wrapper clearfix">
-        <div class="col-1 first border-right">
-          <h3>Contact</h3>
-          <p>
-            email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
-            phone: +1 710 555 1234
-          </p>
-          <h3>Correspondence</h3>
-          <address>
-            Exceptional Realty<br>
-            P.O.Box 5555<br>
-            Brooklyn, NY 11201
-          </address>
-        </div>
+    </div><!-- .wrapper -->
+  </div><!-- .white-wood -->
 
-        <div class="col-1 border-right">
+  <section id="details" class="medium-fade">
+    <div class="wrapper clearfix">
+      <div class="col-1 first">
+        <h3>Contact</h3>
+        <p>
+          email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
+          phone: +1 710 555 1234
+        </p>
+        <h3>Correspondence</h3>
+        <address>
+          Exceptional Realty<br>
+          P.O.Box 5555<br>
+          Brooklyn, NY 11201
+        </address>
+      </div>
 
-        <div class="col-1 border-right">
-          <h3>Links</h3>
-          <p>
-            <a href="#" target="_blank">Home Restoration</a><br>
-            <a href="#" target="_blank">Afordable Mortgages</a><br>
-            <a href="#" target="_blank">Professional Moving Crew</a>
-          </p>
-        </div>
+      <div class="col-1">
+        <h3>Links</h3>
+        <p>
+          <a href="#" target="_blank">Home Restoration</a><br>
+          <a href="#" target="_blank">Afordable Mortgages</a><br>
+          <a href="#" target="_blank">Professional Moving Crew</a>
+        </p>
+      </div>
 
-        <div class="col-1">
-          <h3>Follow</h3>
-          <p>
-            <a href="#" target="_blank">Youtube</a><br>
-            <a href="#" target="_blank">Facebook</a><br>
-            <a href="#" target="_blank">Twitter</a>
-          </p>
-        </div>
-      </div><!-- wrapper -->
-    </section>
+      <div class="col-1">
+        <h3>Follow</h3>
+        <p>
+          <a href="#" target="_blank">Youtube</a><br>
+          <a href="#" target="_blank">Facebook</a><br>
+          <a href="#" target="_blank">Twitter</a>
+        </p>
+      </div>
+    </div><!-- .wrapper -->
+  </section>
 
-    <footer>
-      &copy; 2014 Exceptional Realty. All Rights Reserved!
-    </footer>
+  <footer>
+    &copy; 2014 Exceptional Realty. All Rights Reserved.
+  </footer>
     
 </body>
 </html>
